--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
+    "cookies-next": "^2.1.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "jsonwebtoken": "^9.0.0",
